--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 asgiref==3.5.2
 distlib==0.3.6
+dj-database-url==1.3.0
 Django==4.1.3
 django-cors-headers==3.14.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 filelock==3.8.0
+gunicorn==20.1.0
 Pillow==9.4.0
 platformdirs==2.5.4
+psycopg2==2.9.5
 PyJWT==2.6.0
 pytz==2022.7.1
 sqlparse==0.4.3
+typing_extensions==4.5.0
 virtualenv==20.16.7
+whitenoise==6.4.0
